wp-content/themes/ecosystem-energy/assets/styles/pages/_404.scss
.error-page {
  background-color: $blue;
  text-align: center;

  .content {
    margin-top: $header-height;
    padding: 100px;
    height: 800px;
  }

  .bg-image {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    object-fit: contain;
    opacity: 0.3;
  }

  h1 {
    margin-bottom: 100px;
    @include fontSize(250, 90, 600, -2.5);
    color: $yellow;
    text-align: center;
  }

  p {
    position: relative;
    max-width: 500px;
    margin: auto;
    color: white;
    text-align: center;
    z-index: 1;
  }

  .home-link { color: $yellow; }

  @media (max-width: $tablet) {
    .container {
      height: 640px;
    }

    h1 {
      font-size: 160px;
      margin-bottom: 60px;
    }
  }

  @media (max-width: $mobile-large) {
    .container {
      padding-left: 20px;
      padding-right: 20px;
      height: 450px;
    }

    h1 {
      font-size: 120px;
      margin-bottom: 30px;
    }
  }
}

